<resources>
    <string name="app_name">MAPOLY Map</string>
    <string name="_name">Name</string>
    <string name="secured_payment">Secured Payment</string>
    <string name="paystack_public_key">pk_test_6cf0b48a925dda3be5a1205ec71f1f5b15ef62b9</string>
    <string name="connectNow">Connect Now</string>
    <string name="noconnection">Kindly connect to a WIFI network or enable Mobile Data</string>
    <string name="connectionTitle">No Internet</string>
    <string name="connectionDescription">Cannot connect to the internet</string>
    <string name="purchaseThankYou">"Thank you for purchase"</string>
    <string name="search_hint">Type product name&#8230;</string>
    <string name="customers_table">Customers</string>
    <string name="customers_preference">categoryPreference</string>
    <string name="product_quantity_limit">Product quantity to order must be less than 500</string>
    <string name="prov_product_categories">product categories</string>
    <string name="customers_countries">Countries</string>
    <string name="customers_state">State</string>
    <string name="customers_cities">Cities</string>
    <string name="customers_wishlist">wishlist</string>
    <string name="customers_cart">cart</string>
    <string name="order_history">Order History</string>
    <string name="customers_cart_added">Product added to %1$s.</string>
    <string name="customers_cart_removed">Product removed from cart.</string>
    <string name="cart_total_cost">%1$s cost: %2$s</string>
    <!--    <string name="cart_total_cost">%1$s cost: ₦%2$s</string>-->
    <string name="gotozeal_currency">NGN</string>
    <string name="gotozeal_item">Item</string>
    <string name="gotozeal_total">Total</string>
    <string name="gotozeal_total_cost">Total cost</string>
    <string name="cart_general_cost">%1$s * %2$d</string>
    <string name="new_product">New</string>
    <string name="dismiss_message">Close</string>
    <string name="code_resend">Resend</string>
    <string name="code_products">products</string>
    <string name="register_button">Register now</string>
    <string name="error_message_exist">You do not exist on GotoZeal.</string>
    <string name="error_verify_message">Verification code is not correct, try again.</string>
    <string name="error_general_message">Something is wrong, we will fix it soon, try again or click on code resend&#8230;</string>
    <string name="_password">Password</string>
    <string name="no_terms">Kindly, accept terms and conditions to proceed.</string>
    <string name="payment_complete_form">The payment form is not complete.</string>
    <string name="empty_error_message">This is required to proceed.</string>
    <string name="proceed_checkout">Proceed to checkout</string>
    <string name="credential_error_message">Your username or password is not correct, try again or use Forgot password.</string>
    <string name="mobile_error_message">Mobile number should be 11 digits.</string>
    <string name="names_error_message">%1$s must be more than 3 characters.</string>
    <string name="pin_error_message">Code must be 6 digits.</string>
    <string name="review_message">Review</string>
    <string name="reviews_message">Reviews</string>
    <string name="no_reviews">No reviews yet</string>
    <string name="no_email_set">%1$s_set@gotozeal.com</string>
    <string name="rating_general">%1$d %2$s</string>
    <string name="percent_symbol">%1$s</string>
    <string name="network_error_message">A network error occurred, try again.</string>
    <string name="loading_success_message">Products loading&#8230; we have more products and services coming your way on GotoZeal.</string>
    <string name="promo_code_message">promo code loading&#8230;</string>
    <string name="seller_name_message">seller name loading&#8230;</string>
    <string name="reviews_display_message">reviews loading&#8230;</string>
    <string name="price_message">price loading&#8230;</string>
    <string name="register_success_message">Welcome to GotoZeal, your registration was successful.</string>
    <string name="welcome_message">Welcome to GotoZeal, start shopping with us.</string>
    <string name="product_loading_message">Provisioning %1$s, please wait&#8230;</string>
    <string name="network_loading_message">Provisioning account, please wait&#8230;</string>
    <string name="BASE_URL">https://gotozeal.com</string>
    <string name="c_username">ck_d910dbd00b72c29e23e0172c0fe30f53464fba09</string>
    <string name="c_password">cs_154bc9fb7a5efd76ce8d539344c4d10cbc4fc450</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sms_prompt_message">Kindly wait for sms code in: %1$d</string>
    <string name="sms_verification_code_message">Verification code has been sent.</string>
    <string name="resend_sms_prompt_message">Click on resend, to send a new SMS code.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_learn">Learn More</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_store">Store</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_logout">Logout</string>
    <string name="gotozeal_cart">Cart</string>
    <string name="gotozeal_purchase">Buy Now</string>
    <string name="gotozeal_add_to_cart">Add to cart</string>
    <string name="product">Product</string>
    <string name="similar">Similar</string>
    <string name="u2022_regular_fit_full_sleeve">• Regular fit, full sleeve</string>
    <string name="view_description">Description</string>
    <string name="start_shopping">Start shopping</string>

    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="aboutapp">About App</string>
    <string name="about_activity_title">About Us</string>
    <string name="rate">Rate Us</string>
    <string name="helpcentre">Help Center</string>
    <string name="gotozeal_offers">Offers</string>
    <string name="gotozeal_apptour">App Tour</string>
    <string name="gotozeal_explore">Explore></string>
    <string name="make_payment">Make Payment (%1$s)</string>
    <string name="thank_you">Thank You</string>
    <string name="title_activity_fashion_main">FashionMainActivity</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

</resources>
