<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/buy_products_services"
            android:layout_width="@dimen/marginTop30"
            android:layout_height="@dimen/marginTop30"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/paddingImage"
            android:scaleType="fitCenter"
            android:layout_marginRight="@dimen/paddingImage"
            app:srcCompat="@drawable/ic_shopping_cart_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/paddingImage"
            android:layout_marginRight="@dimen/paddingImage"
            android:layout_toStartOf="@id/buy_products_services"
            android:layout_toLeftOf="@id/buy_products_services"
            android:text="@string/gotozeal_purchase"
            android:textColor="@color/white"
            android:textSize="@dimen/description_size13" />

    </RelativeLayout-->

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/paddingImage">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/new_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/paddingEight"
            android:paddingTop="@dimen/padding4"
            android:paddingEnd="@dimen/paddingEight"
            android:paddingBottom="@dimen/padding4"
            android:text="@string/new_product"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/thumbnail"
            android:layout_toRightOf="@id/thumbnail"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/author_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_toEndOf="@id/thumbnail"
            android:layout_toRightOf="@id/thumbnail"
            android:text="@string/seller_name_message"
            android:textColor="@color/description"
            android:textSize="@dimen/description_size10"
            android:textStyle="bold"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author_details"
            android:layout_toEndOf="@id/thumbnail"
            android:layout_toRightOf="@id/thumbnail"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/loading_success_message"
            android:textColor="@color/primaryDarkColor"
            android:textSize="@dimen/description_size" />


        <RelativeLayout
            android:id="@+id/relativeView20_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_toEndOf="@id/thumbnail"
            android:layout_toRightOf="@id/thumbnail">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/price_message"
                android:textSize="@dimen/description_size"
                android:textColor="@color/primaryDarkColor"/>

            <TextView
                android:id="@+id/old_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/price_message"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <!--Button
                android:id="@+id/buy_products_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:background="@color/primaryColor"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/gotozeal_purchase"
                android:textColor="@color/white" /-->
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeView30_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeView20_pin"
            android:layout_toEndOf="@id/thumbnail"
            android:layout_toRightOf="@id/thumbnail">

            <RatingBar
                android:id="@+id/ratingBar_list"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:isIndicator="true"
                android:stepSize="1.0" />


            <TextView
                android:id="@+id/rating_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ratingBar_list"
                android:layout_toRightOf="@id/ratingBar_list"
                android:text="@string/reviews_display_message"
                android:textColor="@color/textColor"
                tools:visibility="visible" />
        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>