<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.actionProductActivity.Cart">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/CustomTheme"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:titleTextColor="#000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gotozeal_cart"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/marginTop25"
                    android:layout_height="@dimen/marginTop25"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="15dp"
                    android:onClick="Notifications"
                    app:srcCompat="@drawable/notification" />

                <ImageView
                    android:id="@+id/store_home"
                    android:layout_width="@dimen/marginTop25"
                    android:layout_height="@dimen/marginTop25"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:onClick="storeHome"
                    app:srcCompat="@drawable/ic_store_black_24dp" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/activity_cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarwrap"
        android:orientation="vertical"
        android:weightSum="10">

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="9.5"
            android:padding="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/total_cart_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:elevation="@dimen/imageIconDimen40"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/gotozeal_total_cost"
                android:textColor="@color/textColor"
                android:textSize="@dimen/description_size14" />

            <TextView
                android:id="@+id/text_action_bottom2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/imageIconDimen40"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:onClick="checkout"
                android:text="@string/proceed_checkout"
                android:textColor="@color/white"
                android:textSize="@dimen/description_size14"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/tv_no_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loadinganim.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/empty_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:src="@drawable/cartempty"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_fileName="empty_list.json"
        app:lottie_loop="true" />


</RelativeLayout>